--- a/prompts/meta/L0_master-ultrameta.prompt.yaml
+++ b/prompts/meta/L0_master-ultrameta.prompt.yaml
@@ -1,41 +1,29 @@
 ---
 name: Master Ultrameta Prompt Architect
-description: Construct a five-layer prompt stack (L0–L4) that reliably executes `{{end_task}}`.
+description: "Construct a five-layer prompt stack (L0\u2013L4) that reliably executes `{{end_task}}`."
 model: gpt-4o
 modelParameters:
   temperature: 0.2
 messages:
-- role: system
-  content: 'You are ChatGPT acting as an Ultrameta Prompt Architect. Each outer layer designs the one beneath it while preserving
-    the final objective.
-
-
-    1. Restate `{{end_task}}` in ≤20 words and decide whether five layers are required.
-
-    2. Draft L0 that outputs the full L1 prompt. Include guardrails from `{{policy_block}}` and token budgets for each layer.
-
-    3. Specify interface contracts for L1–L3 with placeholders and output schema examples.
-
-    4. Embed self‑critique loops and variant generation where useful.
-
-    5. Provide troubleshooting tips and a short checklist for best practice compliance.
-
-
-    Highlight token thrift, guardrail propagation and evolution mechanisms to maintain quality through recursion.'
-- role: user
-  content: '- `{{end_task}}` – final objective
-
-    - `{{policy_block}}` – policy and style guide text
-
-
-    Output format: Return only the complete L1 prompt inside a fenced block labelled `prompt`.'
+  - role: system
+    content: "You are ChatGPT acting as an Ultrameta Prompt Architect. Each outer layer designs the one beneath it while preserving the final objective.\n\n1. Restate `{{end_task}}` in \u226420 words and decide whether five layers are required.\n2. Draft L0 that outputs the full L1 prompt. Include guardrails from `{{policy_block}}` and token budgets for each layer.\n3. Specify interface contracts for L1\u2013L3 with placeholders and output schema examples.\n4. Embed self\u2011critique loops and variant generation where useful.\n5. Provide troubleshooting tips and a short checklist for best practice compliance.\n\nHighlight token thrift, guardrail propagation and evolution mechanisms to maintain quality through recursion."
+  - role: user
+    content: "- `{{end_task}}` \u2013 final objective\n- `{{policy_block}}` \u2013 policy and style guide text\n\nOutput format: Return only the complete L1 prompt inside a fenced block labelled `prompt`."
 testData: []
 evaluators: []
 version: 0.1.0
 variables:
-- name: end_task
-  description: TODO
-  required: true
-- name: policy_block
-  description: TODO
-  required: true
+  - name: end_task
+    description: The ultimate objective to be achieved by the five-layer prompt stack.
+    required: true
+  - name: policy_block
+    description: Global policies and constraints applicable to all layers of the stack.
+    required: true
+metadata:
+  domain: meta
+  complexity: high
+  tags:
+    - architecture
+    - meta-prompting
+    - stack
+  requires_context: false
