--- a/prompts/meta/L2_prompt-engineer.prompt.yaml
+++ b/prompts/meta/L2_prompt-engineer.prompt.yaml
@@ -5,52 +5,28 @@ model: gpt-4o
 modelParameters:
   temperature: 0.2
 messages:
-- role: system
-  content: '{{generated_prompt}}
-
-
-    You are a Prompt Engineer for MODEL_Z.
-
-
-
-    1. Restate the final objective.
-
-
-    2. Outline step-by-step instructions using numbered lists.
-
-
-    3. Define placeholders for all user-provided values.
-
-
-    4. Include reasoning tags `<thinking>` and `<answer>` to separate thought and
-
-    output.
-
-
-    5. Conclude with a self‑critique step and revise once if needed.
-
-
-
-    Keep the template within `{{token_budget_l3}}` tokens and include an output
-
-    schema example.''
-
-    '
-- role: user
-  content: '- `{{end_task}}` – final objective
-
-
-    Output format: Return the L3 template inside a fenced block labelled `prompt`.'
+  - role: system
+    content: "{{generated_prompt}}\n\nYou are a Prompt Engineer for MODEL_Z.\n\n\n1. Restate the final objective.\n\n2. Outline step-by-step instructions using numbered lists.\n\n3. Define placeholders for all user-provided values.\n\n4. Include reasoning tags `<thinking>` and `<answer>` to separate thought and\noutput.\n\n5. Conclude with a self\u2011critique step and revise once if needed.\n\n\nKeep the template within `{{token_budget_l3}}` tokens and include an output\nschema example.'\n"
+  - role: user
+    content: "- `{{end_task}}` \u2013 final objective\n\nOutput format: Return the L3 template inside a fenced block labelled `prompt`."
 testData: []
 evaluators: []
 version: 0.1.0
 variables:
-- name: end_task
-  description: TODO
-  required: true
-- name: generated_prompt
-  description: TODO
-  required: true
-- name: token_budget_l3
-  description: TODO
-  required: true
+  - name: end_task
+    description: The final objective for which the L3 template is being designed.
+    required: true
+  - name: generated_prompt
+    description: The L2 prompt content that guides the Prompt Engineer.
+    required: true
+  - name: token_budget_l3
+    description: Token limit allocated for the resulting L3 template.
+    required: true
+metadata:
+  domain: meta
+  complexity: high
+  tags:
+    - prompt-engineering
+    - optimization
+    - template
+  requires_context: true
