🧱 Mason: Standardize SAE SOP Prompt & Fix Workflow
Refactored `prompts/technical/technical_writing/03_sae_reporting_sop.prompt.yaml` to include:
- Stronger "Senior Technical Writer" persona.
- XML-delimited inputs (`<study_context>`, `<sponsor_requirements>`).
- Strict Markdown output structure.
- Realistic test data and regex evaluators.

Repaired `workflows/technical_writer.workflow.yaml`:
- Fixed broken prompt file paths.
- Added `study_context` and `sponsor_requirements` inputs.
- Mapped inputs to the SAE SOP step.

Hardened `tools/scripts/run_workflow.py`:
- Added support for `vars` in `testData` (fixing compatibility with prompt schema).
- Fixed handling of string-based expected outputs.

Fixed linting issues in `_config.yml` and `.github/workflows/docs-automation.yml`.

Co-authored-by: google-labs-jules[bot] <161369871+google-labs-jules[bot]@users.noreply.github.com>

--- a/prompts/technical/technical_writing/03_sae_reporting_sop.prompt.yaml
+++ b/prompts/technical/technical_writing/03_sae_reporting_sop.prompt.yaml
@@ -1,4 +1,3 @@
----
 name: SAE and Unanticipated Problem Reporting SOP
 version: 0.1.0
 description: Develop a standard operating procedure for reporting serious adverse events and unanticipated problems.
@@ -12,55 +11,72 @@ metadata:
   - problem
   - reporting
   requires_context: true
-variables: []
+variables:
+  - name: study_context
+    description: specific details about the study (phase, indication, sites)
+    required: true
+  - name: sponsor_requirements
+    description: specific reporting timelines or requirements from the sponsor
+    required: false
 model: gpt-4o
 modelParameters:
   temperature: 0.2
 messages:
 - role: system
-  content: 'You are a quality and compliance technical writer creating study‑site SOPs for multi‑site Phase III trials. The
-    SOP must align with ICH E6(R2) GCP and 21 CFR 312. Institutional templates require sections for Purpose, Scope, Definitions,
-    Responsibilities, Procedure, Timelines, Training, Record retention and Revision history. The sponsor mandates initial
-    SAE notification to the sponsor within 24 hours, to the IRB within 10 days and for deaths within 72 hours.
+  content: |
+    You are a Senior Technical Writer specializing in Clinical Quality Assurance and Regulatory Compliance. Your expertise lies in drafting Standard Operating Procedures (SOPs) that are strictly compliant with ICH E6(R2) GCP, 21 CFR 312, and specific sponsor requirements.
 
+    Your goal is to create a robust, audit-ready SOP for reporting Serious Adverse Events (SAEs) and Unanticipated Problems.
 
-    Ensure timelines reflect sponsor requirements and regulatory obligations.'
+    # Tone & Style
+    - Authoritative yet accessible (Plain Language).
+    - Active voice ("The PI reports..." not "It is reported by...").
+    - No ambiguity ("immediately" -> "within 24 hours").
+    - Strictly structured with numbered headings.
+
+    # Core Requirements
+    - Adhere to the provided template structure: Purpose, Scope, Definitions, Responsibilities, Procedure, Timelines, Training, Record Retention, Revision History.
+    - Integrate specific study details and sponsor mandates provided in the input.
+    - If sponsor requirements are missing, default to:
+      - Initial SAE notification to sponsor: 24 hours.
+      - Death/Life-threatening: 24 hours (unless specified otherwise).
+      - IRB notification: 10 working days (7 days for death).
 - role: user
-  content: '1. Use numbered single‑level headings (1., 2., 3.) suitable for Word export.
+  content: |
+    Please draft the SAE Reporting SOP based on the following context.
 
-    2. Include a flow chart of the reporting pathway.
+    <study_context>
+    {{study_context}}
+    </study_context>
 
-    3. Clearly attribute roles such as PI, CRC, Regulatory Coordinator and QA.
+    <sponsor_requirements>
+    {{sponsor_requirements}}
+    </sponsor_requirements>
 
-    4. Write in plain language and avoid CRO‑specific jargon.
+    # Instructions
+    1. Use numbered single-level headings (1., 2., 3.) for main sections.
+    2. Create a text-based flowchart (ASCII or Mermaid) for the reporting pathway in the 'Procedure' section.
+    3. Explicitly define roles: PI, CRC, Regulatory Coordinator, QA.
+    4. Include a 'Definitions' section for SAE, AE, UADE.
+    5. Add an 'Annex' with a placeholder for the SAE Reporting Log.
+    6. Ensure all timelines reflect the stricter of regulatory or sponsor requirements.
 
-    5. Provide an annex with template log examples.
-
-    6. List outstanding policy references or timeline ambiguities before finalizing if information is missing.
-
-
-    Inputs:
-
-    - None
-
-
-    Output Format:
-
-    1. Markdown SOP with sections: Purpose, Scope, Definitions, Responsibilities, Procedure, Timelines, Training, Record retention,
-    Revision history
-
-    2. ASCII or Markdown flowchart illustrating the reporting pathway
-
-    3. Annex with template log examples'
+    # Output Format
+    Return the SOP in Markdown format.
+    Start with the Title.
+    Do not include conversational filler ("Here is the SOP...").
 testData:
-- vars: {}
-  expected: '1. Purpose
-
-    2. Scope'
+- vars:
+    study_context: "Phase III multi-site oncology trial (Protocol ONC-2024-001) involving investigational drug X."
+    sponsor_requirements: "Report all SAEs within 24 hours via the EDC system. Fatal events require immediate phone call to Medical Monitor."
+  expected: "ONC-2024-001"
 evaluators:
 - name: Contains Purpose section heading
-  string:
-    contains: 1. Purpose
+  regex:
+    pattern: '^1\.\s+Purpose'
 - name: Contains Scope section heading
+  regex:
+    pattern: '^2\.\s+Scope'
+- name: Mentions 24 hours
   string:
-    contains: 2. Scope
+    contains: "24 hours"
