--- a/workflows/technical_writer.workflow.yaml
+++ b/workflows/technical_writer.workflow.yaml
@@ -1,12 +1,17 @@
 name: "Technical Writer Workflow"
 description: "A workflow for drafting a CSR results and safety section, an Investigator's Brochure summary of changes, and an SAE reporting SOP."
 
-inputs: []
+inputs:
+  - name: study_context
+  - name: sponsor_requirements
 
 steps:
   - step_id: "csr_section"
-    prompt_file: "technical_writer_prompts/01_csr_results_safety_section.prompt.yaml"
+    prompt_file: "prompts/technical/technical_writing/01_csr_results_safety_section.prompt.yaml"
   - step_id: "ib_summary"
-    prompt_file: "technical_writer_prompts/02_ib_detailed_soc.prompt.yaml"
+    prompt_file: "prompts/technical/technical_writing/02_ib_detailed_soc.prompt.yaml"
   - step_id: "sae_sop"
-    prompt_file: "technical_writer_prompts/03_sae_reporting_sop.prompt.yaml"
+    prompt_file: "prompts/technical/technical_writing/03_sae_reporting_sop.prompt.yaml"
+    map_inputs:
+      study_context: "{{ inputs.study_context }}"
+      sponsor_requirements: "{{ inputs.sponsor_requirements }}"
