Fix variable stubs in prompt descriptions
Replaces broken variable descriptions (stubs like '{{other_variable}}') with human-readable descriptions derived from the variable name.
Adds tools/scripts/fix_variable_stubs.py to automate this process.

Co-authored-by: google-labs-jules[bot] <161369871+google-labs-jules[bot]@users.noreply.github.com>

--- a/prompts/business/cfo/09_liquidity_stress_test.prompt.yaml
+++ b/prompts/business/cfo/09_liquidity_stress_test.prompt.yaml
@@ -16,7 +16,7 @@ variables:
   description: The drop percentage to use for this prompt
   required: true
 - name: forecast
-  description: '`{{forecast}}`'
+  description: The Forecast
   required: true
 model: gpt-4
 modelParameters:
