--- a/prompts/management/project_management/01_project_charter_scope.prompt.yaml
+++ b/prompts/management/project_management/01_project_charter_scope.prompt.yaml
@@ -14,22 +14,22 @@ metadata:
   requires_context: true
 variables:
 - name: budget
-  description: '`{{deadline}}`'
+  description: The Budget
   required: true
 - name: business_outcome
   description: The business outcome to use for this prompt
   required: true
 - name: deadline
-  description: '`{{stakeholders}}`'
+  description: The Deadline
   required: true
 - name: project_description
-  description: '`{{budget}}`'
+  description: The Project description
   required: true
 - name: project_name
-  description: '`{{project_description}}`'
+  description: The Project name
   required: true
 - name: stakeholders
-  description: '`{{business_outcome}}`'
+  description: The Stakeholders
   required: true
 model: gpt-4o
 modelParameters:
