--- a/prompts/management/project_management/05_risk_pre_mortem_analysis.prompt.yaml
+++ b/prompts/management/project_management/05_risk_pre_mortem_analysis.prompt.yaml
@@ -13,7 +13,7 @@ metadata:
   requires_context: false
 variables:
 - name: project_name
-  description: '`{{project_summary}}`'
+  description: The Project name
   required: true
 - name: project_summary
   description: A summary of the key information
