--- a/prompts/technical/testing/selenium_automation/09_webdriver_initialization.prompt.yaml
+++ b/prompts/technical/testing/selenium_automation/09_webdriver_initialization.prompt.yaml
@@ -14,7 +14,7 @@ metadata:
   requires_context: false
 variables:
 - name: browser
-  description: '{{browser}}'
+  description: The Browser
   required: true
 - name: proxy_url
   description: The URL to process or reference
