--- a/prompts/business/cfo/06_variance_analysis.prompt.yaml
+++ b/prompts/business/cfo/06_variance_analysis.prompt.yaml
@@ -13,7 +13,7 @@ metadata:
   requires_context: true
 variables:
 - name: report
-  description: '`{{report}}`'
+  description: The Report
   required: true
 model: gpt-4
 modelParameters:
