--- a/prompts/business/cfo/12_investor_faq_generation.prompt.yaml
+++ b/prompts/business/cfo/12_investor_faq_generation.prompt.yaml
@@ -13,7 +13,7 @@ metadata:
   requires_context: true
 variables:
 - name: documents
-  description: '`{{documents}}`'
+  description: The Documents
   required: true
 model: gpt-4
 modelParameters:
