--- a/prompts/meta/L5_agent_persona_generator.prompt.yaml
+++ b/prompts/meta/L5_agent_persona_generator.prompt.yaml
@@ -13,7 +13,7 @@ metadata:
   requires_context: true
 variables:
 - name: context
-  description: '{{context}}'
+  description: The Context
   required: true
 - name: goal
   description: The goal or desired outcome
