--- a/prompts/clinical/safety/02_fda_mdr_adverse_event_narrative.prompt.yaml
+++ b/prompts/clinical/safety/02_fda_mdr_adverse_event_narrative.prompt.yaml
@@ -28,19 +28,24 @@ messages:
 - role: user
   content: '{{input}}'
 testData:
-- input: 'Event date: 2024-05-01
-
-    Patient: 34-year-old female
-
-    Device ID: 12345
-
-    Reporter: Physician
-
-    Device returned: No
-
-    '
-  expected: 'Adverse Event Narrative: 34-year-old female experienced skin irritation; device not returned.'
+  - input: |
+      SENDER: Dr. A. Smith (Cardiology)
+      DATE: 2024-06-12
+      PATIENT: J. Doe (M/72)
+      DETAILS: Pt admitted for arrhythmia. Implanted PaceMaker (SN: 998877) showing irregular pacing intervals. Device explanted on 12th. Returned to manuf? Yes. Pt stable post-op.
+    expected: "72-year-old male... PaceMaker (SN: 998877)... device was returned... This information is submitted to comply with 21 CFR 803.52."
+  - input: |
+      REPORT: Nurse notes from 15-May-2024.
+      SUBJECT: Female, 45y.
+      EVENT: Redness at insertion site observed during checkup. No device ID available in chart. Device not removed.
+    expected: "45-year-old female... redness at insertion site... device not removed... This information is submitted to comply with 21 CFR 803.52."
 evaluators:
-- name: Output ends with boilerplate sentence
-  string:
-    endsWith: This information is submitted to comply with 21 CFR 803.52.
+  - name: Ends with regulatory boilerplate
+    regex:
+      pattern: "This information is submitted to comply with 21 CFR 803\\.52\\.$"
+  - name: Narrative includes patient demographics
+    regex:
+      pattern: "\\d{2}-year-old (male|female)"
+  - name: Narrative is concise (under 1200 chars)
+    python:
+      code: "len(output) <= 1200"
